# msgraphx

./: .gitignore  AI.md  CLAUDE.md  DEVELOPMENT.md  README.md  USAGE.md  pyproject.toml
.github/: copilot-instructions.md
graphx/: __main__.py  console.py
graphx/core/: auth.py  saver.py  search.py  terminal.py  tokens.py
graphx/modules/: auth.py
graphx/modules/storage/: __init__.py  search.py
msgraphx/: __main__.py  console.py
msgraphx/core/: auth.py  logbook.py  search.py  terminal.py  tokens.py
msgraphx/modules/storage/: __init__.py  search.py
msgraphx/utils/: dates.py
src/msgraphx/: __init__.py  __main__.py  cli.py  session.py
src/msgraphx/config/: noise_domains.txt  noise_locals.txt
src/msgraphx/core/: auth.py  context.py  drive_search.py  factory.py  graph_search.py
src/msgraphx/modules/aad/: __init__.py  apps.py  authmethods.py  ca.py  enrich.py  grants.py  pim.py  roles.py  search.py
src/msgraphx/modules/graph/: __init__.py  query.py  refresh.py
src/msgraphx/modules/groups/: __init__.py  list.py  members.py  sites.py
src/msgraphx/modules/me/: __init__.py  calendar.py  drive.py  groups.py  onenote.py  people.py  planner.py  shared.py  trending.py  used.py
src/msgraphx/modules/mfa/: __init__.py  security_info.py
src/msgraphx/modules/onedrive/: __init__.py  download.py  search.py
src/msgraphx/modules/outlook/: __init__.py  contacts.py  download.py  search.py  show.py
src/msgraphx/modules/sharepoint/: __init__.py  download.py  groups.py  search.py  sites.py
src/msgraphx/modules/teams/: __init__.py  _common.py  channel.py  channels.py  chat.py  contacts.py  meetings.py  search.py  send.py  show.py
src/msgraphx/utils/: cache.py  console.py  dates.py  errors.py  html.py  logbook.py  output.py  pagination.py  roles.py  tokens.py
tests/: test_cache.py  test_dates.py  test_modules.py  test_tokens.py
