[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"


[project]
name = "msgraphx"
version = "0.1.0"
description = "Microsoft Graph eXploitation toolkit"
authors = [
    {name = "n3rada",email = "72791564+n3rada@users.noreply.github.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "markdownify>=0.14.1",
    "msgraph-sdk>=1.57.0",
    "pkce>=1.0.3",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
]

[project.urls]
repository  = "https://github.com/n3rada/msgraphx"
homepage = "https://github.com/n3rada/msgraphx"
documentation = "https://github.com/n3rada/msgraphx/blob/main/README.md"

[project.scripts]
msgraphx = 'msgraphx.cli:main'

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:kiota_abstractions",
    "ignore::DeprecationWarning:msgraph",
]

